// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<Modal
  contentLabel="branches.rename"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      branches.rename
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="rename-branch-name"
        >
          new_name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="rename-branch-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value="master"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={true}
        type="submit"
      >
        rename
      </button>
      <a
        href="#"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;

exports[`renders 2`] = `
<Modal
  contentLabel="branches.rename"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      branches.rename
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="rename-branch-name"
        >
          new_name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="rename-branch-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value="dev"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        type="submit"
      >
        rename
      </button>
      <a
        href="#"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;

exports[`renders 3`] = `
<Modal
  contentLabel="branches.rename"
  onRequestClose={[MockFunction]}
>
  <header
    className="modal-head"
  >
    <h2>
      branches.rename
    </h2>
  </header>
  <form
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="rename-branch-name"
        >
          new_name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="rename-branch-name"
          maxLength={100}
          name="name"
          onChange={[Function]}
          required={true}
          size={50}
          type="text"
          value="dev"
        />
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <button
        disabled={true}
        type="submit"
      >
        rename
      </button>
      <a
        href="#"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;
